--- a/backend/LiveChat.Api/Properties/launchSettings.json
+++ b/backend/LiveChat.Api/Properties/launchSettings.json
@@ -11,6 +11,7 @@
   "profiles": {
     "LiveChat.Api": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
