refactored users, fixed resources bug, removed error in console oin chat widget,added interceptor to widget

--- a/chat-widget/angular.json
+++ b/chat-widget/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../backend/LiveChat.Api/elements/",
+            "outputPath": "dist/chat-widget",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
