--- a/chat-widget/package.json
+++ b/chat-widget/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:elements": "ng build --output-hashing=none && node elements-build.js",
+    "build:elements": "ng build --output-hashing=none && node elements-build.js ../backend/LiveChat.Api/Resources/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
