--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~12.1.2",
     "@auth0/angular-jwt": "^5.0.2",
     "@microsoft/signalr": "^5.0.8",
+    "angular-plotly.js": "^4.0.4",
+    "plotly.js-dist-min": "^2.12.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
