--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,14 +21,15 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@auth0/angular-jwt": "^5.0.2",
-    "@microsoft/signalr": "^5.0.8",
+    "@microsoft/signalr": "^7.0.12",
+    "angular-file-uploader": "^7.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.2",
-    "@angular/cli": "~12.1.2",
+    "@angular-devkit/build-angular": "^12.2.13",
+    "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "~12.1.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
